# NovaIIM

./: .clang-format  .gitignore  CMakeLists.txt  DOCUMENTATION_STATUS.txt  LICENSE  README.md  THIRD_PARTY_NOTICES
client/cpp/: CMakeLists.txt
client/cpp/core/: client_config.h  client_context.cpp  client_context.h  event_bus.cpp  event_bus.h  export.h  logger.cpp  logger.h  ui_dispatcher.cpp  ui_dispatcher.h
client/cpp/net/: connection_state.h  reconnect_manager.cpp  reconnect_manager.h  request_manager.cpp  request_manager.h  tcp_client.cpp  tcp_client.h
client/desktop/win/: CMakeLists.txt  app.rc  js_bridge.cpp  js_bridge.h  main.cpp  tray_icon.cpp  tray_icon.h  webview2_app.cpp  webview2_app.h  win32_ui_dispatcher.cpp  win32_ui_dispatcher.h
client/mobile/: CMakeLists.txt
client/mobile/android/: NovaClient.kt  nova_jni.cpp
client/mobile/ios/: NovaClient.h  NovaClient.mm
client/nova_sdk/: CMakeLists.txt  export.h  run_build_and_tests.bat
client/nova_sdk/cache/: cache_db.cpp  cache_db.h  cache_models.h  conversation_cache_dao.cpp  conversation_cache_dao.h  group_cache_dao.cpp  group_cache_dao.h  message_cache_dao.cpp  message_cache_dao.h  user_cache_dao.cpp  user_cache_dao.h
client/nova_sdk/core/: client_config.cpp  client_config.h  client_context.cpp  client_context.h  logger.cpp  logger.h  reconnect_manager.cpp  reconnect_manager.h  request_manager.cpp  request_manager.h  ui_dispatcher.h
client/nova_sdk/infra/: connection_state.h  device_info.cpp  device_info.h  http_client.cpp  logger.cpp  logger.h  tcp_client.cpp  tcp_client.h  timer.cpp  timer.h  ws_client.cpp
client/nova_sdk/model/: app_model.h  client_config.cpp  client_config.h  client_context.cpp  client_context.h  client_state.h  contact_model.h  reconnect_manager.cpp  reconnect_manager.h
client/nova_sdk/net/: http_client.cpp  http_client.h  tcp_client.cpp  tcp_client.h  ws_client.h
client/nova_sdk/service/: auth_service.cpp  auth_service.h  conversation_service.cpp  conversation_service.h  file_service.cpp  file_service.h  friend_service.cpp  friend_service.h  group_service.cpp  group_service.h  message_service.cpp  message_service.h  profile_service.cpp  profile_service.h  service_helpers.h  sync_service.cpp  sync_service.h
client/nova_sdk/test/: CMakeLists.txt  test_client_state.cpp  test_reconnect_manager.cpp  test_request_manager.cpp
client/nova_sdk/viewmodel/: app_vm.cpp  app_vm.h  chat_vm.cpp  chat_vm.h  contact_vm.cpp  contact_vm.h  conversation_vm.cpp  conversation_vm.h  group_vm.cpp  group_vm.h  login_vm.cpp  login_vm.h  nova_client.cpp  nova_client.h  observable.h  types.h  ui_dispatcher.cpp  ui_dispatcher.h
client/test/: CMakeLists.txt  test_connection_state.cpp  test_event_bus.cpp  test_request_manager.cpp
protocol/: CMakeLists.txt
protocol/nova/: errors.h  packet.h  proto_types.h  protocol.h
server/: CMakeLists.txt  main.cpp
server/admin/: admin_server.cpp  admin_server.h  http_helper.h  jwt_utils.cpp  jwt_utils.h  password_utils.cpp  password_utils.h
server/core/: app_config.cpp  app_config.h  application.cpp  application.h  application_internal.h  config.cpp  config.h  defer.h  events.h  formatters.h  logger.cpp  logger.h  mpmc_queue.h  password_utils.cpp  password_utils.h  rate_limiter.h  server_context.h  snowflake.h  thread_pool.h
server/cpp/: CMakeLists.txt  main.cpp
server/cpp/core/: config.h  formatters.h  logger.cpp  logger.h  mpmc_queue.h
server/cpp/dao/: message_dao.h
server/cpp/model/: packet.h
server/cpp/net/: connection.h  gateway.cpp  gateway.h
server/cpp/service/: msg_service.cpp  router.cpp  router.h  sync_service.cpp  user_service.cpp
server/cpp/test/: CMakeLists.txt  test_router.cpp
server/dao/: admin_account_dao.h  admin_session_dao.h  admin_session_dao_impl.cpp  admin_session_dao_impl.h  audit_log_dao.h  audit_log_dao_impl.cpp  audit_log_dao_impl.h  conversation_dao.h  dao_factory.cpp  dao_factory.h  db_manager.cpp  db_manager.h  file_dao.h  friend_dao.h  group_dao.h  message_dao.h  message_dao_impl.cpp  message_dao_impl.h  rbac_dao.h  rbac_dao_impl.cpp  rbac_dao_impl.h  seed.h  user_dao.h  user_dao_impl.cpp  user_dao_impl.h
server/dao/impl/: admin_account_dao_impl.cpp  admin_account_dao_impl.h  admin_session_dao_impl.cpp  admin_session_dao_impl.h  audit_log_dao_impl.cpp  audit_log_dao_impl.h  conversation_dao_impl.cpp  conversation_dao_impl.h  file_dao_impl.cpp  file_dao_impl.h  friend_dao_impl.cpp  friend_dao_impl.h  group_dao_impl.cpp  group_dao_impl.h  message_dao_impl.cpp  message_dao_impl.h  rbac_dao_impl.cpp  rbac_dao_impl.h  user_dao_impl.cpp  user_dao_impl.h
server/dao/mysql/: mysql_dao_factory.cpp  mysql_dao_factory.h  mysql_db_manager.cpp  mysql_db_manager.h
server/dao/sqlite3/: sqlite_dao_factory.cpp  sqlite_dao_factory.h  sqlite_db_manager.cpp  sqlite_db_manager.h
server/file/: file_server.cpp  file_server.h
server/model/: packet.h  protocol.h  types.h
server/net/: conn_manager.cpp  conn_manager.h  connection.h  gateway.cpp  gateway.h  tcp_connection.h  ws_connection.h  ws_gateway.cpp  ws_gateway.h
server/service/: conv_service.cpp  conv_service.h  file_service.cpp  file_service.h  friend_service.cpp  friend_service.h  group_service.cpp  group_service.h  msg_service.cpp  msg_service.h  router.cpp  router.h  service_base.h  sync_service.cpp  sync_service.h  user_service.cpp  user_service.h
server/service/errors/: common.h  file_errors.h  msg_errors.h  sync_errors.h  user_errors.h
server/test/: CMakeLists.txt  test_admin_api.cpp  test_admin_dao.cpp  test_application.cpp  test_conn_manager.cpp  test_conv_service.cpp  test_file_server.cpp  test_file_service.cpp  test_friend_service.cpp  test_group_service.cpp  test_jwt_utils.cpp  test_mpmc_queue.cpp  test_msg_service.cpp  test_password_utils.cpp  test_router.cpp  test_user_service.cpp  test_ws_gateway.cpp
server/web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
server/web/src/: components.d.ts  main.ts
server/web/src/api/: admin.ts  audit.ts  auth.ts  index.ts  message.ts  user.ts
(+135 files in other folders)
